# docx-editor

./: .dockerignore  .gitignore  AGENTS.md  CHECKLIST.md  Dockerfile  IMPLEMENTATION-BRIEF.md  MANIFEST.json  README.md  RUNTIME-SKILL-SYSTEM.md  pyproject.toml  requirements.txt
api/: openapi.yaml
app/: __init__.py  main.py
app/api/: chat.py  (+4 more)
config/: .env.example  capabilities.example.yaml
decisions/: ADR-001-llm-planner-deterministic-executor.md  ADR-002-stable-anchors.md  ADR-003-reference-intake-user-friendly.md  ADR-004-mendeley-capability-gate.md  ADR-005-semantic-not-byte-preservation.md
docs/: 00-product-scope.md  01-non-negotiable-requirements.md  02-architecture.md  03-docx-domain-model.md  04-docx-inspection-parsing.md  05-edit-plan-protocol.md  06-deterministic-executor.md  07-reference-intake-evidence.md  08-citation-mendeley-compatibility.md  09-verification-invariants.md  10-security-privacy-threat-model.md  11-api-contract.md  12-frontend-ux.md  13-session-versioning-storage.md  14-llm-orchestration.md  15-testing-fixtures.md  16-deployment-hf-spaces.md  17-observability-errors.md  18-implementation-plan.md  19-definition-of-done.md  20-source-register.md  21-algorithms-pseudocode.md  22-persistence-data-model.md  23-native-mendeley-rnd-protocol.md  24-agent-execution-runbook.md  25-configuration-policy.md
examples/: edit-plan.json  reference-notes-unstructured.md  reference-pack-normalized.json  user-workflow.md
frontend/: README.md  app.js  index.html  style.css
legacy/: blueprint-ai-docx-editor-original.md  lampiran-schema-json-original.md
(+57 files in other folders)
